Style corrections - card header now has enough space for button (prevents header jumping when button is added dynamically)

--- a/src/assets/keenmate/image.css
+++ b/src/assets/keenmate/image.css
@@ -129,8 +129,8 @@ figure img {
 	transition: all 0.3s ease-in-out;
 }
 .selected {
-	-webkit-box-shadow: 0 0 0 4px #5ebdec !important;
-	 box-shadow: 0 0 0 4px #5ebdec !important;
+	-webkit-box-shadow: 0 0 0 .3rem #5ebdec !important;
+	 box-shadow: 0 0 0 .3rem #5ebdec !important;
 }
 .selected::before {
 	background-color: transparent;
